--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <h1 > GIT y GITHUB</h1>   
 <p>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, illum corporis blanditiis laboriosam voluptatibus nesciunt, deleniti porro animi cupiditate harum, placeat ab voluptates repudiandae fugit eaque itaque eos deserunt? Nemo?</p>
 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde recusandae rem autem fugiat doloribus perferendis totam ea aspernatur tempore veritatis, repellat quam id molestiae iure. Quis sequi repudiandae ad placeat.</p>
-<img scr =" "  alt = "">
+<img scr ="logohtml.png"  alt = "">
+<ul>  
+    <li> Gustavo </li>
+    <li> Alejandro </li>
+</ul>
 
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, eveniet soluta. Doloremque neque quae illum reiciendis itaque, inventore accusantium maxime soluta hic excepturi sunt, explicabo aspernatur facilis voluptate, aut culpa.</p>
 
 </body>
+
 </html>
 
